# highland-kurtosis

./: .gitignore  CLAUDE.md  CMakeLists.txt  MCSHighland.cc  README.md  REPO_AUDIT.md  make_all_figures.py  make_figure1.py
analysis/: analyze_mcs.py  analyze_model_comparison.py  analyze_phase1.py  analyze_stacked_layers.py  analyze_thin_wall.py  bl4s_predictions.py  compare_kappa_debug.py  cut_variation_study.py  diagnose_model_files.py  diagnose_stacked.py  generate_proposal_figures.py  generate_stls.py  generate_theory_comparison.py  n_scaling_analysis.py  proposal_analysis.py  proposal_figures.py  ray_trace_sweep0.py  systematic_uncertainty.py  universal_equation_final.py  visualize_stls.py
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: init.mac  run_air_control.mac  run_solid_control.mac  sweep1_physics_validation.mac  sweep1a_finest.mac  sweep2_infill_scan.mac  vis.mac
paper/: PAPER_AUDIT.md  main.tex  references.bib  table_systematics.tex
scripts/: generate_geometry.py  generate_macros.py  generate_model_comparison_macros.py  generate_phase1_macros.py  generate_thin_wall_macros.py  install_geant4.sh  ray_trace_sweep0.py  run_all_sweeps.sh  run_model_comparison.sh  run_phase1.sh  run_proposal_campaign.sh  run_stacked_layers.sh  run_thin_wall.sh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
